hphp/hack/test/typecheck/generics_restrictions/contravariance_inout_2.php.like_types.exp
File "contravariance_inout_2.php", line 6, characters 41-41:
Illegal usage of a contravariant type parameter (Typing[4121])
File "contravariance_inout_2.php", line 4, characters 10-10:
This is where the parameter was declared as contravariant (-)
File "contravariance_inout_2.php", line 6, characters 41-41:
Inout/ref function parameters are both covariant and contravariant
File "contravariance_inout_2.php", line 7, characters 19-19:
Invalid assignment to an inout parameter (Typing[4337])
File "contravariance_inout_2.php", line 7, characters 19-19:
Expected T (inout parameter)
File "contravariance_inout_2.php", line 5, characters 39-39:
But got dynamic because it is an unenforceable type
